# tuner

./: README.md  pyproject.toml  start_tuner.py
dev/: 2022_11_18__14_37_19_Gitatte E tief.npy  2022_11_18__14_37_30_Gitarre E tief.npy  Untitled.ipynb
doc/: doc.tex  fft test.ipynb  keys.ipynb
doc/.ipynb_checkpoints/: keys-checkpoint.ipynb
test/: test_util.py
tuner/: __init__.py  config.py  main.py  tuner_main.py  tuner_util.py  util.py
