[tool.poetry]
name = "tuner"
version = "0.1.0"
description = "analyse mic input (frequency analysis) to be used to tune instruments"
authors = [
    { name="Richard Hartmann", email="richard_hartmann@gmx.de" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Environment :: X11 Applications :: Qt",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]

[tool.poetry.dependencies]
python = "~3.9"
PyQt5 = "5.15.3"
pyqtgraph = "0.11"   # newer version requires newer Qt5 libs
matplotlib = "^3.5.2"
numpy = "^1.23"
scipy = "^1.9.3"
SoundCard = "^0.4.2"


[tool.poetry.dev-dependencies]
notebook = "^6.5.2"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
